--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -42,7 +42,7 @@ layout: default
     <!-- News -->
     {% if page.news and site.announcements.enabled %}
       <h2>
-        <a href="{{ '/news/' | relative_url }}" style="color: inherit">news</a>
+        <a class="font-weight-bold" style="color: inherit">Recent News</a>
       </h2>
       {% include news.liquid limit=true %}
     {% endif %}
@@ -58,7 +58,7 @@ layout: default
     <!-- Selected papers -->
     {% if page.selected_papers %}
       <h2>
-        <a href="{{ '/publications/' | relative_url }}" style="color: inherit">selected publications</a>
+        <a class="font-weight-bold" style="color: inherit">Publications</a>
       </h2>
       {% include selected_papers.liquid %}
     {% endif %}
