--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -42,12 +42,12 @@ layout: default
     <!-- News -->
     {% if page.news and site.announcements.enabled %}
       <h2>
-        <a class="font-weight-bold" style="color: inherit">Recent News</a>
+        <a class="font-weight-bold" style="color: inherit">News</a>
       </h2>
       {% include news.liquid limit=true %}
     {% endif %}
 
-    <!-- Selected papers -->
+    <!-- Papers -->
     {% if page.selected_papers %}
       <h2>
         <a class="font-weight-bold" style="color: inherit">Publications</a>
@@ -55,13 +55,11 @@ layout: default
       {% include selected_papers.liquid %}
     {% endif %}
 
-    <!-- Social -->
-    {% if page.social %}
-      <div class="social">
-        <div class="contact-icons">{% include social.liquid %}</div>
-
-        <div class="contact-note">{{ site.contact_note }}</div>
-      </div>
+    <!-- Experience -->
+    <h2>
+      <a class="font-weight-bold" style="color: inherit">Experience</a>
+    </h2>
+    {% include experience.liquid %}
     {% endif %}
 
     {% if site.newsletter.enabled and site.footer_fixed %}
