--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -59,6 +59,7 @@ layout: default
     <h2>
       <a class="font-weight-bold" style="color: inherit">Experience</a>
     </h2>
+    {% include experience.liquid %}
 
     {% if site.newsletter.enabled and site.footer_fixed %}
       {% include newsletter.liquid center=true %}
