--- a/_includes/experience.liquid
+++ b/_includes/experience.liquid
@@ -2,10 +2,8 @@
   <div class="table-responsive">
     <table class="table table-sm table-borderless">
       <tr>
-      <th scope="row" style="width: 20%">{{ Oct, 2023 - Oct, 2024 }}</th>
-      <td>
-        {{ Visiting student at Yale University | remove: '<p>' | remove: '</p>' | emojify }}
-      </td>
+      <th scope="row" style="width: 20%"> Oct, 2023 - Oct, 2024 </th>
+      <td> Visiting student at Yale University </td>
       </tr>
     </table>
   </div>
