--- a/_includes/service.liquid
+++ b/_includes/service.liquid
@@ -1,5 +1,5 @@
 {% capture markdown_content %}
-- LPAR 2024, subreviewer
+- [LPAR 2024](https://easychair.org/smart-program/LPAR2024/), subreviewer
 {% endcapture %}
 
-{{ markdown_content | markdownify | raw }}
+{{ markdown_content | markdownify }}
