--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -73,6 +73,18 @@ layout: default
     </h2>
     {% include awards.liquid %}
 
+    <!-- Awards -->
+    <h2>
+      <a class="font-weight-bold" style="color: inherit">Awards and Grants</a>
+    </h2>
+    {% include awards.liquid %}
+
+    <!-- Teaching -->
+    <h2>
+      <a class="font-weight-bold" style="color: inherit">Teaching Assistant</a>
+    </h2>
+    {% include teaching.liquid %}
+
     {% if site.newsletter.enabled and site.footer_fixed %}
       {% include newsletter.liquid center=true %}
     {% endif %}
