--- a/_includes/mentoring.liquid
+++ b/_includes/mentoring.liquid
@@ -1,8 +1,11 @@
 {% capture awards_content %}
-- Dexin Zhang, SJTU Master student -> Princeton University (Ph.D.)
+- Dexin Zhang, SJTU MS student -> Princeton University (Ph.D. student)
 - Yicun Yang, SJTU Ph.D. student
-- Zhenglin Xu, SJTU Master student
-- Zhuoran Wei, SJTU Master student
+- Feiyang Chen, SJTU Ph.D. student
+- Zhenglin Xu, SJTU MS student
+- Zhuoran Wei, SJTU MS student
+- Haoning Lan, SJTU MS student
+- Lefeng Wang, SJTU undergrad student
 {% endcapture %}
 
 {{ awards_content | markdownify }}
