--- a/_includes/mentoring.liquid
+++ b/_includes/mentoring.liquid
@@ -5,6 +5,7 @@
 - Zhenglin Xu, SJTU MS student
 - Zhuoran Wei, SJTU MS student
 - Haoning Lan, SJTU MS student
+- Zhuohao Shen, SJTU MS student
 - Lefeng Wang, SJTU undergrad student
 {% endcapture %}
 
