--- a/_includes/mentoring.liquid
+++ b/_includes/mentoring.liquid
@@ -2,10 +2,10 @@
 - Dexin Zhang, SJTU MS student -> Princeton University (Ph.D. student)
 - Yicun Yang, SJTU Ph.D. student
 - Feiyang Chen, SJTU Ph.D. student
-- Zhenglin Xu, SJTU MS student
-- Zhuoran Wei, SJTU MS student
-- Haoning Lan, SJTU MS student
-- Zhuohao Shen, SJTU MS student
+- Zhenglin Xu, SJTU M.S. student
+- Zhuoran Wei, SJTU M.S. student
+- Haoning Lan, SJTU M.S. student
+- Zhuohao Shen, SJTU M.S. student
 - Lefeng Wang, SJTU undergrad student
 {% endcapture %}
 
