--- a/_includes/teaching.liquid
+++ b/_includes/teaching.liquid
@@ -1,6 +1,6 @@
 {% capture awards_content %}
-- Discrete Mathematics: 2024 Fall, 2023 Fall, 2022 Fall, 2021 Fall, 2020 Fall, 2019 Fall
-- Introduction of Computer Systems: 2016 Fall
+- Head TA of SJTU CS2501: Discrete Mathematics (2024 Fall, 2023 Fall, 2022 Fall, 2021 Fall)
+- Head TA of SJTU MA238: Discrete Mathematics (2020 Fall, 2019 Fall)
 {% endcapture %}
 
 {{ awards_content | markdownify }}
