--- a/_includes/mentoring.liquid
+++ b/_includes/mentoring.liquid
@@ -1,12 +1,12 @@
 {% capture awards_content %}
-- Dexin Zhang, SJTU MS student -> Princeton University (Ph.D. student)
+- Dexin Zhang, SJTU Master's student -> Princeton University (Ph.D. student)
 - Yicun Yang, SJTU Ph.D. student
 - Feiyang Chen, SJTU Ph.D. student
-- Zhenglin Xu, SJTU M.S. student
-- Zhuoran Wei, SJTU M.S. student
-- Haoning Lan, SJTU M.S. student
-- Zhuohao Shen, SJTU M.S. student
-- Lefeng Wang, SJTU undergrad student
+- Zhenglin Xu, SJTU Master's student
+- Zhuoran Wei, SJTU Master's student
+- Haoning Lan, SJTU Master's student
+- Zhuohao Shen, SJTU Master's student
+- Lefeng Wang, SJTU Undergraduate student
 {% endcapture %}
 
 {{ awards_content | markdownify }}
