--- a/_includes/mentoring.liquid
+++ b/_includes/mentoring.liquid
@@ -1,12 +1,11 @@
-{% capture awards_content %}
-- Dexin Zhang, SJTU Master's student -> Princeton University (Ph.D. student)
-- Yicun Yang, SJTU Ph.D. student
-- Feiyang Chen, SJTU Ph.D. student
-- Zhenglin Xu, SJTU Master's student
-- Zhuoran Wei, SJTU Master's student
-- Haoning Lan, SJTU Master's student
-- Zhuohao Shen, SJTU Master's student
-- Lefeng Wang, SJTU Undergraduate student
+{% capture mentoring_content %}
+- Feiyang Chen (2024 - now), SJTU Ph.D. student
+- Yicun Yang (2022 - 2023), SJTU Ph.D. student
+- Haoning Lan (2023 - now), SJTU Master's student
+- Zhenglin Xu (2022 - now), SJTU Master's student
+- Zhuoran Wei (2022 - now), SJTU Master's student
+- Zhuohao Shen (2022 - 2023), SJTU Master's student
+- Dexin Zhang (2021 - 2023), SJTU Master's student -> Princeton University (Ph.D. student)
 {% endcapture %}
 
-{{ awards_content | markdownify }}
+{{ mentoring_content | markdownify }}
