--- a/_includes/service.liquid
+++ b/_includes/service.liquid
@@ -1,5 +1,5 @@
-{% capture markdown_content %}
+{% capture service_content %}
 - [LPAR 2024](https://easychair.org/smart-program/LPAR2024/), subreviewer
 {% endcapture %}
 
-{{ markdown_content | markdownify }}
+{{ service_content | markdownify }}
