--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -39,6 +39,12 @@ layout: default
 
     <div class="clearfix">{{ content }}</div>
 
+    <!-- Research -->
+    <h2>
+      <a class="font-weight-bold" style="color: inherit">Research</a>
+    </h2>
+    {% include research.liquid %}
+
     <!-- News -->
     {% if page.news and site.announcements.enabled %}
       <h2>
