--- a/_includes/experience.liquid
+++ b/_includes/experience.liquid
@@ -3,7 +3,7 @@
     <table class="table table-sm table-borderless">
       <tr>
       <th scope="row" style="width: 20%"> Oct, 2023 - Oct, 2024 </th>
-      <td> Visiting Assistant in Research at Yale University, supervised by <a href='https://www.cs.yale.edu/homes/shao/'>Prof. Zhong Shao</a> </td>
+      <td> Visiting Ph.D. Student at Yale University, supervised by <a href='https://www.cs.yale.edu/homes/shao/'>Prof. Zhong Shao</a> </td>
       </tr>
     </table>
   </div>
